--- a/PupperViewer-Web-/PupperViewer/mystyle.css
+++ b/PupperViewer-Web-/PupperViewer/mystyle.css
@@ -4,11 +4,43 @@ Program: mystyle.css
 Purpose: Provides Styling decisions for PupperViewer program
 Author: Mathieu Lancaster
 */
+
+audio {
+	position: relative;
+	margin-top: 5px;
+	float: left;
+	width: 250px;
+	
+}
+
+#songInfo {
+	
+	margin-top: 5px;
+	margin-bottom: 5px;
+	height: 50px;
+	width: 350px;
+	color: white;
+	font-size: 14pt;
+	background-color: black;
+}
 h1 {
 	margin-bottom: 5px;
 	text-align: center;
 	font-size: 35pt;
 	color: Magenta;
+}
+
+a {
+	position: relative;
+	margin-top: 15px;
+	margin-right: 15px;
+	float: right;
+	font-size: 14pt;
+	color: white;
+}
+
+a:hover {
+	color: red;
 }
 
 input:hover {
